[metadata]
name = tias
url = https://github.com/wheelercj/tias
version = 0.3.0
author = Chris Wheeler
author_email = christopher.wheeler.320@my.csun.edu
description = Quickly run code in almost any language
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = code, development, programming
classifiers = 
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = tias
python_requires = >=3.9
package_dir =
    =.
install_requires = requirements.txt

[options.package_data]
tias =
    =py.typed
    =LICENSE
    =README.md
    =requirements.txt
