[metadata]
name = tias
url = https://github.com/wheelercj/tias
version = 0.4.6
author = Chris Wheeler
author_email = christopher.wheeler.320@my.csun.edu
description = Quickly run code in almost any language
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
keywords = code, development, programming
classifiers =
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = tias
python_requires = >=3.9
package_dir =
    =.
install_requires =
    aiodns >= 3.0.0
    aiohttp >= 3.8.1
    aiosignal >= 1.2.0
    async-timeout >= 4.0.2
    async-tio >= 1.3.2
    attrs >= 21.4.0
    cffi >= 1.15.1
    charset-normalizer >= 2.1.0
    click >= 8.1.3
    colorama >= 0.4.5
    frozenlist >= 1.3.0
    idna >= 3.3
    keyboard >= 0.13.5
    multidict >= 6.0.2
    mypy-extensions >= 0.4.3
    packaging >= 21.3
    pathspec >= 0.9.0
    platformdirs >= 2.5.2
    pycares >= 4.2.1
    pycparser >= 2.21
    pyparsing >= 3.0.9
    python-dateutil >= 2.8.2
    tomli >= 2.0.1
    typing_extensions >= 4.3.0
    yarl >= 1.7.2

[options.package_data]
tias =
    =py.typed
    =LICENSE
    =README.md
